fix background size on mobile

--- a/web/static/app/layout/_embed.sass
+++ b/web/static/app/layout/_embed.sass
@@ -28,6 +28,7 @@ body.embed
 
     &_site-link
         background: url("/images/changelog-mark-only.svg") center no-repeat
+        background-size: contain
         display: block
         height: 30px
         position: absolute
@@ -39,6 +40,7 @@ body.embed
 
         body.embed--day &
             background: url("/images/changelog-mark-dark.svg") center no-repeat
+            background-size: contain
 
         @media (min-width: $smartphone)
             right: $gutter
